--- a/settings.json
+++ b/settings.json
@@ -1,67 +1,67 @@
 {
+    // General
+    "workbench.colorTheme": "Winter is Coming (Dark Black - No Italics)",
     "workbench.editor.empty.hint": "hidden",
+    "workbench.editor.enablePreview": false,
+    "workbench.startupEditor": "none",
+    "workbench.sideBar.location": "right",
     "editor.tabSize": 2,
+    "editor.minimap.enabled": false,
+    "editor.renderFinalNewline": "off",
+    "editor.cursorStyle": "block",
+    "editor.cursorBlinking": "solid",
     "editor.fontFamily": "Martian Mono SemiExpanded",
     "editor.fontSize": 12,
-    "git.confirmSync": false,
-    "editor.minimap.enabled": false,
-    "git.openRepositoryInParentFolders": "never",
+    "editor.stickyScroll.enabled": false,
+    "editor.parameterHints.enabled": false,
+    "editor.formatOnSave": true,
+    "editor.rulers": [
+        160
+    ],
+    "editor.wordWrap": "wordWrapColumn",
+    "editor.wordWrapColumn": 160,
     "editor.autoClosingBrackets": "never",
     "editor.autoClosingQuotes": "never",
     "editor.acceptSuggestionOnEnter": "off",
+    "terminal.integrated.fontFamily": "Martian Mono SemiExpanded",
     "terminal.integrated.fontSize": 12,
-    "vim.foldfix": true,
-    "html.suggest.html5": false,
-    "html.autoClosingTags": false,
-    "javascript.autoClosingTags": false,
-    "typescript.autoClosingTags": false,
-    "editor.renderFinalNewline": "off",
+    "terminal.integrated.defaultProfile.windows": "Git Bash",
     "explorer.confirmDelete": false,
-    "editor.cursorBlinking": "solid",
-    "editor.cursorStyle": "block-outline",
-    "dart.warnWhenEditingFilesOutsideWorkspace": false,
-    "vim.ignorecase": false,
-    "dart.notifyAnalyzerErrors": false,
-    "workbench.colorTheme": "Winter is Coming (Dark Black - No Italics)",
-    "dart.runPubGetOnPubspecChanges": "never",
-    "dart.flutterSdkPath": "/home/anton/fvm/default/bin",
-    "workbench.editor.enablePreview": false,
-    "html.autoCreateQuotes": false,
     "explorer.confirmDragAndDrop": false,
     "explorer.autoReveal": true,
-    "workbench.startupEditor": "none",
-    "dart.showInspectorNotificationsForWidgetErrors": false,
-    "dart.promptToGetPackages": false,
-    "files.insertFinalNewline": false,
-    "editor.stickyScroll.enabled": false,
-    "javascript.updateImportsOnFileMove.enabled": "always",
     "git.autofetch": true,
-    "update.showReleaseNotes": false,
-    "workbench.sideBar.location": "right",
-    "editor.parameterHints.enabled": false,
+    "files.insertFinalNewline": false,
     "extensions.ignoreRecommendations": true,
-    "terminal.integrated.fontFamily": "Martian Mono SemiExpanded",
+    "update.showReleaseNotes": false,
     "telemetry.telemetryLevel": "off",
-    "terminal.integrated.defaultProfile.windows": "Git Bash",
-    "markdownlint.config": {
-        "MD033": false
-    },
-    "[dart]": {
-        "editor.formatOnSave": true,
-        "editor.formatOnPaste": true
-    },
-    "[php]": {
-        "editor.formatOnSave": true
-    },
-    "dart.lineLength": 160,
-    "editor.rulers": [160],
-    "editor.wordWrap": "wordWrapColumn",
-    "editor.wordWrapColumn": 160,
-    "dart.showTodos": false,
-    "editor.formatOnSave": true,
+    // Vim
+    "vim.foldfix": true,
+    "vim.ignorecase": false,
+    // HTML / JS / TS
+    "html.suggest.html5": false,
+    "html.autoClosingTags": false,
+    "html.autoCreateQuotes": false,
+    "javascript.autoClosingTags": false,
+    "javascript.updateImportsOnFileMove.enabled": "always",
     "javascript.suggest.enabled": false,
     "javascript.suggest.names": false,
     "typescript.suggest.enabled": false,
+    "typescript.autoClosingTags": false,
+    "typescript.updateImportsOnFileMove.enabled": "always",
+    // Dart
+    "dart.notifyAnalyzerErrors": false,
+    "dart.warnWhenEditingFilesOutsideWorkspace": false,
+    "dart.runPubGetOnPubspecChanges": "always",
+    "dart.flutterSdkPath": "/home/anton/fvm/default/bin",
+    "dart.lineLength": 160,
+    "dart.showInspectorNotificationsForWidgetErrors": false,
+    "dart.promptToGetPackages": false,
+    "dart.showTodos": true,
+    // Markdown (.md) linter
+    "markdownlint.config": {
+        "MD033": false
+    },
+    // Lines to read highly indented code
     "indentRainbow.indicatorStyle": "light",
     "indentRainbow.colors": [
         "rgba(255,255,64,0.5)",
@@ -71,5 +71,4 @@
     ],
     "indentRainbow.errorColor": "rgba(128,32,32,0.6)",
     "indentRainbow.tabmixColor": "rgba(128,32,96,0.6)",
-    "typescript.updateImportsOnFileMove.enabled": "always"
 }
